# nasa-snowflake-pipeline

./: README.md  dagster_cloud.yaml  pyproject.toml  requirements.txt
.github/workflows/: branch_deployments.yml  deploy.yml
nasa_snowflake/: __init__.py  my_pipeline.py
