[project]
name = "nasa-snowflake"
version = "0.1.0"
description = "NASA → Snowflake ETL pipeline with Dagster"
requires-python = ">=3.9"

dependencies = [
    "dagster",
    "dagit",
    "dagster-snowflake",
    "snowflake-connector-python",
    "requests",
    "xarray",
    "pandas",
    "h5netcdf"
]
